--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ spring.datasource.password=123456a@
 spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto= none
-spring.jpa.show-sql= false
-spring.jpa.hibernate.format_sql= false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql= true
+spring.jpa.hibernate.format_sql= true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 
 #MAIL
 spring.servlet.multipart.max-file-size=50MB
